# google-ads-pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  pre-commit.yml  terraform.yml
dags/: google_ads_pipeline.py
dags/operators/: __init__.py
dashboards/: README.md  app.py
docs/: GCP-SETUP.md  Google_Ads_Bidding_Strategy.md  PROJECT.md  TESTS.md  architecture.md  configuration.md  development.md  monitoring.md  performance_optimization.md  setup.md  troubleshooting.md
scripts/: check_data_quality.py  config.py  dbt.sh  docker-build.sh  docker-down.sh  docker-rebuild.sh  docker-up.sh  extract_finance.py  extract_google_ads.py  extract_trends.py  extract_weather.py  generate_synthetic_data.py  load_to_bigquery.py  synthetic_data_config.yaml  utils.py  verify.py
terraform/: backend.tf  bigquery.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  conftest.py  verify_all.py
tests/unit/: test_data_quality.py  test_extractors.py  test_utils.py
